packages/typ/tests/fixtures/diagnostics/0338_fun_polymorphic_record_field_mismatch_10.ml.expected
File "0338_fun_polymorphic_record_field_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0338_fun_polymorphic_record_field_mismatch_10 is not a valid module name.

File "0338_fun_polymorphic_record_field_mismatch_10.ml", line 2, characters 43-53:
2 | let bad_kappa : poly_kappa = { run_kappa = fun _ -> 9 }
                                               ^^^^^^^^^^
Error: This field value has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
