packages/typ/tests/fixtures/diagnostics/0338_fun_polymorphic_record_field_mismatch_10.ml
type poly_kappa = { run_kappa : 'a. 'a -> 'a }
let bad_kappa : poly_kappa = { run_kappa = fun _ -> 9 }
